force-app/main/default/objects/FENC_Activity__c/FENC_Activity__c.object-meta.xml
<CustomObject>
    <description>Custom object to record the activities carried out as part of a Fraud, Error and Non-Compliance (FENC) assessment</description>
    <label>FENC Activity</label>
    <nameField>
        <displayFormat>FENA-{00000}</displayFormat>
        <label>FENC Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FENC Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>