force-app/main/default/objects/FENC_Activity__c/fields/A_A_Expenditure_Reported__c.field-meta.xml
<CustomField>
    <fullName>A_A_Expenditure_Reported__c</fullName>
    <label>A&amp;A Expenditure Reported</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>