force-app/main/default/objects/FENC_Activity__c/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>Supplier selection</fullName>
            </value>
            <value>
                <fullName>Consumer protection</fullName>
            </value>
            <value>
                <fullName>Completion of works</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>