force-app/main/default/objects/FENC_Activity__c/fields/Activity_Lead__c.field-meta.xml
<CustomField>
    <fullName>Activity_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>