force-app/main/default/objects/FENC_Activity__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>