force-app/main/default/objects/FENC_Activity__c/fields/Activity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Activity_Outcome__c</fullName>
    <label>Activity Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>