force-app/main/default/objects/FENC_Activity__c/fields/Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Date__c</fullName>
    <label>Activity Start Date</label>
    <type>Date</type>
</CustomField>