force-app/main/default/objects/FENC_Activity__c/fields/Award_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Award_Name_Text__c</fullName>
    <formula>Funding_Award__r.Name</formula>
    <label>Award Name Text</label>
    <type>Text</type>
</CustomField>