force-app/main/default/objects/FENC_Activity__c/fields/Booking_Officer__c.field-meta.xml
<CustomField>
    <fullName>Booking_Officer__c</fullName>
    <description>Booking officer from related current booking record</description>
    <formula>Current_Booking__r.Booking_Officer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Officer</label>
    <type>Text</type>
</CustomField>