force-app/main/default/objects/FENC_Activity__c/fields/Category_of_FENC__c.field-meta.xml
<CustomField>
    <fullName>Category_of_FENC__c</fullName>
    <label>Category of FENC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process/Administration</fullName>
            </value>
            <value>
                <fullName>Customer/Beneficiary</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Measure/Product/Service</fullName>
            </value>
            <value>
                <fullName>Installer/Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>