force-app/main/default/objects/FENC_Activity__c/fields/Current_Booking__c.field-meta.xml
<CustomField>
    <fullName>Current_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>