force-app/main/default/objects/FENC_Activity__c/fields/Current_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Booking_Date__c</fullName>
    <formula>Current_Booking__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X Current Booking Date</label>
    <type>Date</type>
</CustomField>