force-app/main/default/objects/FENC_Activity__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>Captures the date an activity was closed</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>