force-app/main/default/objects/FENC_Activity__c/fields/Date_of_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Inspection__c</fullName>
    <description>Field used to capture the date of inspection</description>
    <label>X Date of Inspection</label>
    <type>Date</type>
</CustomField>