force-app/main/default/objects/FENC_Activity__c/fields/FENC_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FENC_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FENC Assessment</label>
    <referenceTo>FENC_Assessment__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>