force-app/main/default/objects/FENC_Activity__c/fields/FENC_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FENC_Assessment_Type__c</fullName>
    <label>FENC Assessment Type</label>
    <referenceTo>FENC_Assessment_Type__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>