force-app/main/default/objects/FENC_Activity__c/fields/FENC_Severity__c.field-meta.xml
<CustomField>
    <fullName>FENC_Severity__c</fullName>
    <label>FENC Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>