force-app/main/default/objects/FENC_Activity__c/fields/Final_Activity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Activity_Outcome__c</fullName>
    <label>X Final Activity Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FENC Found – Investigation Required</fullName>
            </value>
            <value>
                <fullName>FENC suspected - further scrutiny required</fullName>
            </value>
            <value>
                <fullName>FENC identified - remedial action required</fullName>
            </value>
            <value>
                <fullName>FENC identified: major issues - escalate for Investigation</fullName>
            </value>
            <value>
                <fullName>FENC identified: immediate threat - escalate to DESNZ</fullName>
            </value>
            <value>
                <fullName>Inconclusive – Investigation Recommended</fullName>
            </value>
            <value>
                <fullName>Inconclusive - further scrutiny required</fullName>
            </value>
            <value>
                <fullName>No FENC Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>