force-app/main/default/objects/FENC_Activity__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <description>Picklist used to record the findings on a FENC Activity</description>
    <label>Findings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No FENC Found</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>FENC Found</fullName>
            </value>
            <value>
                <fullName>N/A: cancelled/discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>