force-app/main/default/objects/FENC_Activity__c/fields/Funding_Property_Detail__c.field-meta.xml
<CustomField>
    <fullName>Funding_Property_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Property Detail</label>
    <referenceTo>FundingPropertyDetail__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>