force-app/main/default/objects/FENC_Activity__c/fields/Inspection_Level__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Level__c</fullName>
    <description>Picklist used to identify the inspection level.</description>
    <label>X Inspection Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First line - junior inspector</fullName>
            </value>
            <value>
                <fullName>Second line - senior inspector/chartered surveyor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>