force-app/main/default/objects/FENC_Activity__c/fields/Inspector_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Surveyor__c</fullName>
    <description>Field used to identify the inspector/surveyor</description>
    <label>X Inspector/Surveyor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>