force-app/main/default/objects/FENC_Activity__c/fields/OS_Candidate_Address__c.field-meta.xml
<CustomField>
    <fullName>OS_Candidate_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OS Candidate Address</label>
    <referenceTo>OS_Candidate_Address__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>