force-app/main/default/objects/FENC_Activity__c/fields/Preceding_Activity__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Activity</label>
    <referenceTo>FENC_Activity__c</referenceTo>
    <relationshipLabel>Preceding Activities</relationshipLabel>
    <relationshipName>Preceding_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>