force-app/main/default/objects/FENC_Activity__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>IF(
    Funding_Property_Detail__c &lt;&gt; null, 
    Funding_Property_Detail__r.Property_Address__c, 
    IF(
        OS_Candidate_Address__c &lt;&gt; null, 
        OS_Candidate_Address__r.OS_Address__c, 
        null
    )
)</formula>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>