force-app/main/default/objects/FENC_Activity__c/fields/Property_RAG__c.field-meta.xml
<CustomField>
    <fullName>Property_RAG__c</fullName>
    <description>Picklist used to identify the RAG level of a property.</description>
    <inlineHelpText>Red: major issues - poses immediate health and safety risks
Amber-Red: major issues - will affect measure performance
Amber: minor issues - may affect measure performance
Amber-Green: minor issues - will not materially affect measure performance
Green: no issues - passes inspection standards
N/A: cancelled/discontinued</inlineHelpText>
    <label>Property RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>