force-app/main/default/objects/FENC_Activity__c/fields/Property_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Property_Risk_Level__c</fullName>
    <description>Formula used to calculate the risk level based on the Property RAG.</description>
    <formula>IF(
    TEXT( Property_RAG__c ) = &apos;Red&apos;, 
    &apos;Severe: Immediate risk to the fabric of the building, and, or, the health of the occupant.&apos;, 
    IF(
        TEXT( Property_RAG__c ) = &apos;Amber-Red&apos;, 
        &apos;High: Non-immediate risk to the fabric of the building and, or, the health of the occupant.&apos;,
        IF(
            TEXT( Property_RAG__c ) = &apos;Amber&apos;, 
            &apos;Medium: Risk of the measure failing and, or, risk of measure not performing as intended due to installation and, or, design.&apos;,
            IF(
                TEXT( Property_RAG__c ) = &apos;Amber-Green&apos;, 
                &apos;Low: Cosmetic or snagging issues that do not affect the performance of the measure, occupant health or building health.&apos;,
                IF(
                    TEXT( Property_RAG__c ) = &apos;Green&apos;, 
                    &apos;No risk: No issues observed and, or, all remediation addressed, and documents uploaded align to TM data warehouse&apos;,
                    &apos;N/A: cancelled/discontinued&apos;
                )
            )
        )      
    )
)</formula>
    <label>Property Risk Level</label>
    <type>Text</type>
</CustomField>