force-app/main/default/objects/FENC_Activity__c/fields/Property_UPRN__c.field-meta.xml
<CustomField>
    <fullName>Property_UPRN__c</fullName>
    <description>Unique property reference number for the located address.</description>
    <formula>IF(
     Funding_Property_Detail__c &lt;&gt; null, 
     Funding_Property_Detail__r.Address_UPRN__c , 
    IF(
        OS_Candidate_Address__c &lt;&gt; null, 
         OS_Candidate_Address__r.OS_UPRN__c, 
        null
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property UPRN</label>
    <type>Text</type>
</CustomField>