force-app/main/default/objects/FENC_Activity__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Type</label>
    <referenceTo>Questionnaire_Type__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>