force-app/main/default/objects/FENC_Activity__c/fields/Related_Property_Measure__c.field-meta.xml
<CustomField>
    <fullName>Related_Property_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Property Measure</label>
    <referenceTo>Property_Measure__c</referenceTo>
    <relationshipLabel>FENC Activities</relationshipLabel>
    <relationshipName>FENC_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>