force-app/main/default/objects/FENC_Activity__c/fields/RLO_GR_Representative__c.field-meta.xml
<CustomField>
    <fullName>RLO_GR_Representative__c</fullName>
    <description>Field used to capture the name of the RLO/GR Representative</description>
    <label>RLO/GR Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>