force-app/main/default/objects/FENC_Activity__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <formula>Funding_Award__r.FundingOpportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme</label>
    <type>Text</type>
</CustomField>