force-app/main/default/objects/FENC_Activity__c/fields/TM_Measure_Category__c.field-meta.xml
<CustomField>
    <fullName>TM_Measure_Category__c</fullName>
    <formula>Related_Property_Measure__r.TM_Measure_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Measure Category</label>
    <type>Text</type>
</CustomField>