force-app/main/default/objects/FENC_Activity__c/fields/TM_Unique_Property_Measure_No__c.field-meta.xml
<CustomField>
    <fullName>TM_Unique_Property_Measure_No__c</fullName>
    <formula>Related_Property_Measure__r.Trustmark_UMR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Unique Property Measure No</label>
    <type>Text</type>
</CustomField>