force-app/main/default/objects/FENC_Activity__c/recordTypes/A_A_Checking.recordType-meta.xml
<RecordType>
    <fullName>A_A_Checking</fullName>
    <active>true</active>
    <label>A&amp;A Checking</label>
</RecordType>