force-app/main/default/objects/FENC_Activity__c/recordTypes/GR_Assurance_Activity.recordType-meta.xml
<RecordType>
    <fullName>GR_Assurance_Activity</fullName>
    <active>true</active>
    <label>GR Assurance Activity</label>
</RecordType>