force-app/main/default/objects/FENC_Activity__c/recordTypes/Site_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Site_Inspection</fullName>
    <active>true</active>
    <label>Site Inspection</label>
</RecordType>