force-app/main/default/objects/FENC_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_Category__c</columns>
    <columns>Activity_Lead__c</columns>
    <columns>Activity_Start_Date__c</columns>
    <columns>Activity_Completed_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Activity_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>